.kube/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quacker
  labels:
    app: quacker
    ns: NS_DEFAULT
    git-rev: daccd493b3d65dcc0f7a8bed80d62e4874b7f89e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quacker
  template:
    metadata:
      labels:
        app: quacker
        poke: ""
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - quacker 
              - key: ns
                operator: In
                values:
                - NS_DEFAULT
            topologyKey: failure-domain.beta.kubernetes.io/zone
      volumes:
      - name: app-conf
        secret:
          secretName: app-conf-dir
      volumes:
      - name: quacker-conf
        secret:
          secretName: quacker-conf-dir
      containers:
      - name: quacker
        image: 541765997109.dkr.ecr.us-east-1.amazonaws.com/ucroo/flow:daccd493b3d65dcc0f7a8bed80d62e4874b7f89e
        resources:
          requests:
            memory: "1024Mi"
          limits:
            memory: "1024Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-conf
          mountPath: "/appConf"
        volumeMounts:
        - name: quacker-conf
          mountPath: "/quackerConf"
