.kube/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: quacker-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:541765997109:certificate/676b3109-5ddb-4e34-9f49-94ee92653a0c"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-type: "elb"
#    service.beta.kubernetes.io/aws-load-balancer-access-log-enabled: "true"
#    service.beta.kubernetes.io/aws-load-balancer-access-log-emit-interval: "60"
#    service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-name: "ucroo-eks-quacker-access-logs"
#    service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-prefix: "quacker/lower"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "300"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "3"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "3"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "15"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "5"
spec:
  selector:
    app: quacker
  ports:
  - protocol: "TCP"
    port: 443
    targetPort: 8080
  type: "LoadBalancer"
status:
  loadBalancer:
    ingress:
