.kube/alb-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: quacker-app-service-alb
  name: quacker-app-service-alb
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: quacker
  ports:
  - name: port-1
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        namespace: <<namespace>>
        name: alb-ingress
        annotations:
                kubernetes.io/ingress.class: alb
                alb.ingress.kubernetes.io/target-type: 'ip'
                alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
                alb.ingress.kubernetes.io/scheme: internet-facing
                alb.ingress.kubernetes.io/backend-protocol: HTTP
                alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
                alb.ingress.kubernetes.io/healthcheck-port: traffic-port
                alb.ingress.kubernetes.io/healthcheck-path: /healthz
                alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
                alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
                alb.ingress.kubernetes.io/healthy-threshold-count: '2'
                alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
                alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=36000,slow_start.duration_seconds=60,deregistration_delay.timeout_seconds=30
                alb.ingress.kubernetes.io/certificate-arn: <<certificate-arn>>
                alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true,deletion_protection.enabled=true,routing.http.drop_invalid_header_fields.enabled=true,idle_timeout.timeout_seconds=600
                alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
        tls:
        - hosts:
          - unused
        rules:
        - http:
                paths:
                - path: /*
                  backend:
                          serviceName: ssl-redirect
                          servicePort: use-annotation
                - path: /*
                  backend:
                          serviceName: quacker-app-service-alb
                          servicePort: 8080
